--- a/style.css
+++ b/style.css
@@ -1,17 +1,35 @@
-.w-input {
-  border: lightgrey;
+.wrapper {
+  width: 75%;
+}
+
+.inputWrapper {
+  border: lightgray;
   border-style: solid;
   border-width: 1px;
+  border-radius: 0.28571429rem;
   box-shadow: 0 1px 2px 0 rgba(34, 36, 38, 0.15);
   font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
   line-height: 1.4285em;
+  font-size: 12px;
+  font-weight: 700;
   padding: 25px;
   color: rgb(66, 66, 66);
+}
+
+.inputButton {
+  color: red;
+  padding-top: 5px;
 }
 
 .center {
   margin: auto;
   display: block;
+}
+
+.imageList {
+  min-height: 1px;
+  background-color: whitesmoke;
+  margin-top: 10px;
 }
 
 #btn {
@@ -23,8 +41,19 @@
   height: 30px;
 }
 
-#ImageList {
-  min-height: 1px;
-  background-color: whitesmoke;
-  margin-top: 10px;
+div.images {
+  display: inline-flex;
+  padding-left: 15px;
+}
+
+img {
+  border-radius: 5%;
+  transition: 0.5s;
+  max-width: 230px;
+}
+.attribute_on_click {
+  width: 1000px;
+}
+img:hover {
+  transform: scale(1.5);
 }
