--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+  background-color: white;
+  color: black;
+}
+
 .wrapper {
   width: 75%;
 }
@@ -23,6 +28,19 @@
   font-weight: 700;
   padding: 25px;
   color: rgb(66, 66, 66);
+}
+
+.button1 {
+  background-color: #fff;
+  color: #000;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+}
+
+.dark-mode {
+  background-color: black;
+  color: white;
 }
 
 .inputButton {
